--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "firebase": "^10.7.1",
     "vee-validate": "^4.12.2",
     "vue-toastification": "^2.0.0-rc.5",
     "yup": "^1.3.2"
