--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.7.1",
     "vee-validate": "^4.12.2",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-toastify": "^0.1.14",
     "yup": "^1.3.2"
   }
 }
